small improvment on translation

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -1,10 +1,11 @@
 {
-  "Über mich" : "Über mich",
-  "FAQ" : "FAQ",
-  "Kontakt" : "Kontakt",
-  "Home" : "Home",
-  "Vorsorge" : "Vorsorge",
-  "Eigenheim" : "Eigenheim",
-  "Vermögensaufbau" : "Vermögensaufbau",
-  "Versicherungen" : "Versicherungen"
+  "Über mich": "Über mich",
+  "FAQ": "FAQ",
+  "Kontakt": "Kontakt",
+  "Home": "Home",
+  "Vorsorge": "Vorsorge",
+  "Eigenheim": "Eigenheim",
+  "Vermögensaufbau": "Vermögensaufbau",
+  "Versicherungen": "Versicherungen",
+  "Warum Finanzplanung": "Warum Finanzplanung"
 }
