--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -6,5 +6,49 @@
   "Vorsorge" : "Prévoyance",
   "Eigenheim" : "Maison",
   "Vermögensaufbau" : "Constitution de patrimoine",
-  "Versicherungen" : "Assurance"
+  "Versicherungen" : "Assurance",
+
+  "Datenschutz": "bla",
+
+  "Warum Finanzplanung": "Warum Finanzplanung",
+  "Warum_Finanzplanung_text_paragrph1": "Eine professionelle Finanzplanung bildet den Grundbaustein einer sorgenfreien Zukunft. Dank der Erstellung eines klaren Budgets und Finanzplans, können Einnahmen und Ausgaben optimal aufeinander abgestimmt werden. Die gemeinsame Analyse der individuellen Situation erlaubt die Planung zur Verwirklichung von Träumen und Zielen wie Eigenheim, Weltreise oder Familienplanung. Entsprechend der persönlichen Bedürfnissen werden passende Finanzprodukte ausgewählt und zusammengestellt.",
+
+  "Card_Vorsorge_paragraph1": "Card_Vorsorge_paragraph1",
+  "Card_Vorsorge_paragraph2": "Card_Vorsorge_paragraph2",
+  "Card_Vorsorge_paragraph3": "Card_Vorsorge_paragraph3",
+
+  "Card_Versicherungen_paragraph1": "Card_Versicherungen_paragraph1",
+  "Card_Versicherungen_paragraph2": "Card_Versicherungen_paragraph2",
+  "Card_Versicherungen_paragraph3": "Card_Versicherungen_paragraph3",
+
+  "Card_Eigenheim_paragraph1": "Card_Eigenheim_paragraph1",
+  "Card_Eigenheim_paragraph2": "Card_Eigenheim_paragraph2",
+  "Card_Eigenheim_paragraph3": "Card_Eigenheim_paragraph3",
+
+  "Card_Vermögensaufbau_paragraph1": "Card_Vermögensaufbau_paragraph1",
+  "Card_Vermögensaufbau_paragraph2": "Card_Vermögensaufbau_paragraph2",
+  "Card_Vermögensaufbau_paragraph3": "Card_Vermögensaufbau_paragraph3",
+
+  "Miriam über Finanzplanung": "Miriam über Finanzplanung",
+  "Miriam_über_finanzplanung_text":"Miriam_über_finanzplanung_text",
+
+  "vorsorge_paragraph_0_title": "vorsorge_paragraph_0_title",
+  "vorsorge_paragraph_0_text": "vorsorge_paragraph_0_text",
+  "vorsorge_paragraph_1_title": "vorsorge_paragraph_1_title",
+  "vorsorge_paragraph_1_text": "vorsorge_paragraph_1_text",
+
+  "eigenheim_paragraph_0_title": "eigenheim_paragraph_0_title",
+  "eigenheim_paragraph_0_text": "eigenheim_paragraph_0_text",
+  "eigenheim_paragraph_1_title": "eigenheim_paragraph_1_title",
+  "eigenheim_paragraph_1_text": "eigenheim_paragraph_1_text",
+
+  "vermoegensaufbau_paragraph_0_title": "vermoegensaufbau_paragraph_0_title",
+  "vermoegensaufbau_paragraph_0_text": "vermoegensaufbau_paragraph_0_text",
+  "vermoegensaufbau_paragraph_1_title": "vermoegensaufbau_paragraph_1_title",
+  "vermoegensaufbau_paragraph_1_text": "vermoegensaufbau_paragraph_1_text",
+
+  "versicherungen_paragraph_0_title": "verischerungen_paragraph_0_title",
+  "versicherungen_paragraph_0_text": "verischerungen_paragraph_0_text",
+  "versicherungen_paragraph_1_title": "verischerungen_paragraph_1_title",
+  "versicherungen_paragraph_1_text": "verischerungen_paragraph_1_text"
 }
