--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -33,7 +33,7 @@
   "Card_Vermögensaufbau_paragraph3": "Card_Vermögensaufbau_paragraph3",
 
   "Miriam über Finanzplanung": "Miriam über Finanzplanung",
-  "Miriam_über_finanzplanung_text":"Miriam_über_finanzplanung_text",
+  "Miriam_über_finanzplanung_text": "Miriam_über_finanzplanung_text",
 
   "vorsorge_paragraph_0_title": "vorsorge_paragraph_0_title",
   "vorsorge_paragraph_0_text": "vorsorge_paragraph_0_text",
@@ -53,5 +53,8 @@
   "versicherungen_paragraph_0_title": "verischerungen_paragraph_0_title",
   "versicherungen_paragraph_0_text": "verischerungen_paragraph_0_text",
   "versicherungen_paragraph_1_title": "verischerungen_paragraph_1_title",
-  "versicherungen_paragraph_1_text": "verischerungen_paragraph_1_text"
+  "versicherungen_paragraph_1_text": "verischerungen_paragraph_1_text",
+
+  "Ueber_mich_title": "Über mich",
+  "Ueber_mich_text": "Ueber_mich_text"
 }
