consistend numbering translation

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -16,21 +16,21 @@
   "Warum_Finanzplanung_text_paragraph_3": "Die gemeinsame Analyse der individuellen Situation erlaubt die Planung zur Verwirklichung von Träumen und Zielen wie Eigenheim, Weltreise oder Familienplanung.",
   "Warum_Finanzplanung_text_paragraph_4": "Entsprechend der persönlichen Bedürfnissen werden passende Finanzprodukte ausgewählt und zusammengestellt.",
 
-  "Card_Vorsorge_paragraph1": "Card_Vorsorge_paragraph1",
-  "Card_Vorsorge_paragraph2": "Card_Vorsorge_paragraph2",
-  "Card_Vorsorge_paragraph3": "Card_Vorsorge_paragraph3",
+  "Card_Vorsorge_paragraph_1": "Card_Vorsorge_paragraph_1",
+  "Card_Vorsorge_paragraph_2": "Card_Vorsorge_paragraph_2",
+  "Card_Vorsorge_paragraph_3": "Card_Vorsorge_paragraph_3",
 
-  "Card_Versicherungen_paragraph1": "Card_Versicherungen_paragraph1",
-  "Card_Versicherungen_paragraph2": "Card_Versicherungen_paragraph2",
-  "Card_Versicherungen_paragraph3": "Card_Versicherungen_paragraph3",
+  "Card_Versicherungen_paragraph_1": "Card_Versicherungen_paragraph_1",
+  "Card_Versicherungen_paragraph_2": "Card_Versicherungen_paragraph_2",
+  "Card_Versicherungen_paragraph_3": "Card_Versicherungen_paragraph_3",
 
-  "Card_Eigenheim_paragraph1": "Card_Eigenheim_paragraph1",
-  "Card_Eigenheim_paragraph2": "Card_Eigenheim_paragraph2",
-  "Card_Eigenheim_paragraph3": "Card_Eigenheim_paragraph3",
+  "Card_Eigenheim_paragraph_1": "Card_Eigenheim_paragraph_1",
+  "Card_Eigenheim_paragraph_2": "Card_Eigenheim_paragraph_2",
+  "Card_Eigenheim_paragraph_3": "Card_Eigenheim_paragraph_3",
 
-  "Card_Vermögensaufbau_paragraph1": "Card_Vermögensaufbau_paragraph1",
-  "Card_Vermögensaufbau_paragraph2": "Card_Vermögensaufbau_paragraph2",
-  "Card_Vermögensaufbau_paragraph3": "Card_Vermögensaufbau_paragraph3",
+  "Card_Vermögensaufbau_paragraph_1": "Card_Vermögensaufbau_paragraph_1",
+  "Card_Vermögensaufbau_paragraph_2": "Card_Vermögensaufbau_paragraph_2",
+  "Card_Vermögensaufbau_paragraph_3": "Card_Vermögensaufbau_paragraph_3",
 
   "Miriam über Finanzplanung": "Miriam über Finanzplanung",
   "Miriam_über_finanzplanung_text": "Miriam_über_finanzplanung_text",
