--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -1,57 +1,58 @@
 {
-  "Über mich": "De Moi",
+  "Über mich": "À propos de moi",
   "FAQ": "QF",
-  "Kontakt": "Contacter",
+  "Kontakt": "Contact",
   "Home": "Accueil",
   "Vorsorge": "Prévoyance",
-  "Eigenheim": "Maison",
-  "Vermögensaufbau": "Constitution de patrimoine",
-  "Versicherungen": "Assurance",
+  "Eigenheim": "Immobilier & Hypothèques",
+  "Vermögensaufbau": "Constitution du patrimoine",
+  "Versicherungen": "Assurances",
 
-  "Datenschutz": "bla",
+  "Datenschutz": "Confidentialité",
 
-  "Warum Finanzplanung": "Warum Finanzplanung",
-  "Warum_Finanzplanung_text_paragrph1": "Eine professionelle Finanzplanung bildet den Grundbaustein einer sorgenfreien Zukunft. Dank der Erstellung eines klaren Budgets und Finanzplans, können Einnahmen und Ausgaben optimal aufeinander abgestimmt werden. Die gemeinsame Analyse der individuellen Situation erlaubt die Planung zur Verwirklichung von Träumen und Zielen wie Eigenheim, Weltreise oder Familienplanung. Entsprechend der persönlichen Bedürfnissen werden passende Finanzprodukte ausgewählt und zusammengestellt.",
+  "Warum Finanzplanung": "Pourquoi un Conseil financier ?",
+  "Warum_Finanzplanung_text_paragrph_1": "Admettons-le : tout le monde a, de temps à autre, besoin de conseils.",
+  "Warum_Finanzplanung_text_paragrph_2": "Le marché Suisse - avec plus que 300 banques et 200 assurances - est trop vaste pour trouver facilement les solutions adaptées à notre situation personnelle. Grâce à un conseil financier professionnel et ciblé, vous pouvez combler des lacunes dans vos assurances, diminuer les dépenses, et faire d'avantage plus d'économies. Tout commence par définir ces rêves et objectifs. Par la suite, je vous aide à planifier l'acaht d'un logement, l'éducation de vos enfants, ou encore la mise une indépendance professionnelle.",
 
-  "Card_Vorsorge_paragraph1": "Card_Vorsorge_paragraph1",
-  "Card_Vorsorge_paragraph2": "Card_Vorsorge_paragraph2",
-  "Card_Vorsorge_paragraph3": "Card_Vorsorge_paragraph3",
+  "Card_Vorsorge_paragraph_1": "Prévoyance vieillesse",
+  "Card_Vorsorge_paragraph_2": "Garantie du Revenu",
+  "Card_Vorsorge_paragraph_3": "Prévoyance patrimoniale",
 
-  "Card_Versicherungen_paragraph1": "Card_Versicherungen_paragraph1",
-  "Card_Versicherungen_paragraph2": "Card_Versicherungen_paragraph2",
-  "Card_Versicherungen_paragraph3": "Card_Versicherungen_paragraph3",
+  "Card_Versicherungen_paragraph_1": "Assurance maladie",
+  "Card_Versicherungen_paragraph_2": "Assurances choses/bâtiment",
+  "Card_Versicherungen_paragraph_3": "Assurance vie",
 
-  "Card_Eigenheim_paragraph1": "Card_Eigenheim_paragraph1",
-  "Card_Eigenheim_paragraph2": "Card_Eigenheim_paragraph2",
-  "Card_Eigenheim_paragraph3": "Card_Eigenheim_paragraph3",
+  "Card_Eigenheim_paragraph_1": "Financement",
+  "Card_Eigenheim_paragraph_2": "Hypothèques",
+  "Card_Eigenheim_paragraph_3": "Frais et Droits",
 
-  "Card_Vermögensaufbau_paragraph1": "Card_Vermögensaufbau_paragraph1",
-  "Card_Vermögensaufbau_paragraph2": "Card_Vermögensaufbau_paragraph2",
-  "Card_Vermögensaufbau_paragraph3": "Card_Vermögensaufbau_paragraph3",
+  "Card_Vermögensaufbau_paragraph_1": "Plan d'épargne",
+  "Card_Vermögensaufbau_paragraph_2": "Investissements",
+  "Card_Vermögensaufbau_paragraph_3": "Constitution de fortune ciblée",
 
-  "Miriam über Finanzplanung": "Miriam über Finanzplanung",
-  "Miriam_über_finanzplanung_text": "Miriam_über_finanzplanung_text",
+  "Miriam über Finanzplanung": "La planification financière selon Miriam",
+  "Miriam_über_finanzplanung_text": "Nous décidons de demander des conseils professionnels pour diverses raisons importantes.",
 
-  "vorsorge_paragraph_0_title": "vorsorge_paragraph_0_title",
+  "vorsorge_paragraph_0_title": "Prévoyance vieillesse",
   "vorsorge_paragraph_0_text": "vorsorge_paragraph_0_text",
-  "vorsorge_paragraph_1_title": "vorsorge_paragraph_1_title",
+  "vorsorge_paragraph_1_title": "Garantie du Revenu",
   "vorsorge_paragraph_1_text": "vorsorge_paragraph_1_text",
 
-  "eigenheim_paragraph_0_title": "eigenheim_paragraph_0_title",
+  "eigenheim_paragraph_0_title": "Financement",
   "eigenheim_paragraph_0_text": "eigenheim_paragraph_0_text",
-  "eigenheim_paragraph_1_title": "eigenheim_paragraph_1_title",
+  "eigenheim_paragraph_1_title": "Hypothèques",
   "eigenheim_paragraph_1_text": "eigenheim_paragraph_1_text",
 
-  "vermoegensaufbau_paragraph_0_title": "vermoegensaufbau_paragraph_0_title",
+  "vermoegensaufbau_paragraph_0_title": "Plan d'épargne",
   "vermoegensaufbau_paragraph_0_text": "vermoegensaufbau_paragraph_0_text",
-  "vermoegensaufbau_paragraph_1_title": "vermoegensaufbau_paragraph_1_title",
+  "vermoegensaufbau_paragraph_1_title": "Investissements",
   "vermoegensaufbau_paragraph_1_text": "vermoegensaufbau_paragraph_1_text",
 
-  "versicherungen_paragraph_0_title": "verischerungen_paragraph_0_title",
-  "versicherungen_paragraph_0_text": "verischerungen_paragraph_0_text",
-  "versicherungen_paragraph_1_title": "verischerungen_paragraph_1_title",
-  "versicherungen_paragraph_1_text": "verischerungen_paragraph_1_text",
+  "versicherungen_paragraph_0_title": "Assurance maladie",
+  "versicherungen_paragraph_0_text": "",
+  "versicherungen_paragraph_1_title": "Assurances choses/bâtiment",
+  "versicherungen_paragraph_1_text": "La recherche de bonnes assurances est compliquée et longue. Ensemble, nous trouvons la meilleure solution pour vous. Je me charge volontiers de toutes les démarches administratives ce qui vous permet de profiter de votre temps pour vivre.",
 
-  "Ueber_mich_title": "Über mich",
-  "Ueber_mich_text": "Ueber_mich_text"
+  "Ueber_mich_title": "À propos de moi",
+  "Ueber_mich_text": "Avant de me lancer autant que conseillère financière indépendant, j'ai effectué des études à l'Hospitality Business School à Lausanne. Actuellement en formation continue, j'approfondis mes connaissances de base en finance, comptabilité et immobilier pour obtenir le brevet fédéral. Ayant travaillé dans l'industrie hôtelière pendant de nombreuses années, j'ai l'habitude de travailler avec toutes sortes de clients. Les gens, avec leurs rêves et leurs souhaits, sont toujours au centre de mes préoccupations. Mon travail me permet de rencontrer des personnes dans toute la Suisse et de les accompagner dans la gestion de leurs finances. Contactez-moi afin qu'on fasse connaissance lors d'un premier rendez-vous gratuite et sans engagement !"
 }
