german translation improved

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -1,60 +1,48 @@
 {
-  "Über mich": "Über mich",
-  "FAQ": "FAQ",
-  "Kontakt": "Kontakt",
-  "Home": "Home",
-  "Vorsorge": "Vorsorge",
-  "Eigenheim": "Eigenheim",
-
-  "Vermögensaufbau": "Vermögensaufbau",
-  "Versicherungen": "Versicherungen",
-  "Datenschutz": "Datenschutz",
-
-  "Warum Finanzplanung": "Warum Finanzplanung",
-  "Warum_Finanzplanung_text_paragraph_1": "Eine professionelle Finanzplanung bildet den Grundbaustein einer sorgenfreien Zukunft.",
-  "Warum_Finanzplanung_text_paragraph_2": "Dank der Erstellung eines klaren Budgets und Finanzplans, können Einnahmen und Ausgaben optimal aufeinander abgestimmt werden.",
-  "Warum_Finanzplanung_text_paragraph_3": "Die gemeinsame Analyse der individuellen Situation erlaubt die Planung zur Verwirklichung von Träumen und Zielen wie Eigenheim, Weltreise oder Familienplanung.",
-  "Warum_Finanzplanung_text_paragraph_4": "Entsprechend der persönlichen Bedürfnissen werden passende Finanzprodukte ausgewählt und zusammengestellt.",
-
-  "Card_Vorsorge_paragraph_1": "Card_Vorsorge_paragraph_1",
-  "Card_Vorsorge_paragraph_2": "Card_Vorsorge_paragraph_2",
-  "Card_Vorsorge_paragraph_3": "Card_Vorsorge_paragraph_3",
-
-  "Card_Versicherungen_paragraph_1": "Card_Versicherungen_paragraph_1",
-  "Card_Versicherungen_paragraph_2": "Card_Versicherungen_paragraph_2",
-  "Card_Versicherungen_paragraph_3": "Card_Versicherungen_paragraph_3",
-
-  "Card_Eigenheim_paragraph_1": "Card_Eigenheim_paragraph_1",
-  "Card_Eigenheim_paragraph_2": "Card_Eigenheim_paragraph_2",
-  "Card_Eigenheim_paragraph_3": "Card_Eigenheim_paragraph_3",
-
-  "Card_Vermögensaufbau_paragraph_1": "Card_Vermögensaufbau_paragraph_1",
-  "Card_Vermögensaufbau_paragraph_2": "Card_Vermögensaufbau_paragraph_2",
-  "Card_Vermögensaufbau_paragraph_3": "Card_Vermögensaufbau_paragraph_3",
-
-  "Miriam über Finanzplanung": "Miriam über Finanzplanung",
-  "Miriam_über_finanzplanung_text": "Miriam_über_finanzplanung_text",
-
-  "vorsorge_paragraph_0_title": "vorsorge_paragraph_0_title",
-  "vorsorge_paragraph_0_text": "vorsorge_paragraph_0_text",
-  "vorsorge_paragraph_1_title": "vorsorge_paragraph_1_title",
-  "vorsorge_paragraph_1_text": "vorsorge_paragraph_1_text",
-
-  "eigenheim_paragraph_0_title": "eigenheim_paragraph_0_title",
-  "eigenheim_paragraph_0_text": "eigenheim_paragraph_0_text",
-  "eigenheim_paragraph_1_title": "eigenheim_paragraph_1_title",
-  "eigenheim_paragraph_1_text": "eigenheim_paragraph_1_text",
-
-  "vermoegensaufbau_paragraph_0_title": "vermoegensaufbau_paragraph_0_title",
-  "vermoegensaufbau_paragraph_0_text": "vermoegensaufbau_paragraph_0_text",
-  "vermoegensaufbau_paragraph_1_title": "vermoegensaufbau_paragraph_1_title",
-  "vermoegensaufbau_paragraph_1_text": "vermoegensaufbau_paragraph_1_text",
-
-  "versicherungen_paragraph_0_title": "verischerungen_paragraph_0_title",
-  "versicherungen_paragraph_0_text": "verischerungen_paragraph_0_text",
-  "versicherungen_paragraph_1_title": "verischerungen_paragraph_1_title",
-  "versicherungen_paragraph_1_text": "verischerungen_paragraph_1_text",
-
-  "Ueber_mich_title": "Über mich",
-  "Ueber_mich_text": "Ueber_mich_text"
+"Card_Eigenheim_paragraph_1": "Machbarkeit",
+"Card_Eigenheim_paragraph_2": "Hypothekenvergleich",
+"Card_Eigenheim_paragraph_3": "Langzeitplanung",
+"Card_Vermögensaufbau_paragraph_1": "Sparplan",
+"Card_Vermögensaufbau_paragraph_2": "Investments",
+"Card_Vermögensaufbau_paragraph_3": "Individuelle Anlageprofile",
+"Card_Versicherungen_paragraph_1": "Vermögenssicherung",
+"Card_Versicherungen_paragraph_2": "Sachversicherung",
+"Card_Versicherungen_paragraph_3": "Lebensversicherung",
+"Card_Vorsorge_paragraph_1": "Einkommenssicherung",
+"Card_Vorsorge_paragraph_2": "Vorsorge Nachkommen",
+"Card_Vorsorge_paragraph_3": "Altersvorsorge",
+"Dienstleistung": "Dienstleistung",
+"Datenschutz": "Datenschutz",
+"Eigenheim": "Eigenheim",
+"FAQ": "FAQ",
+"Home": "Home",
+"Kontakt": "Kontakt",
+"Miriam über Finanzplanung": "Miriam über Finanzplanung",
+"Ueber_mich_text": "Mein Bachelor-Studium habe ich in Lausanne an der Hospitality Business School absolviert. Das Grundwissen in Finanzen, Buchhaltung und Immobilienwesen vertiefe ich in der Weiterbildung zur Finanzberaterin mit eidg. Fachausweis. Da ich langjährig im Gastgewerbe tätig war, bin ich geübt im Umgang mit Menschen. Nach wie vor stehen bei mir die Kunden, mit ihren Träumen und Wünschen, im Zentrum. Meine Arbeit erlaubt es mir, Leute in der ganzen Schweiz kennenzulernen und bei Finanzfragen zu unterstützen. Vereinbaren Sie ein unverbindliches, kostenloses Erstgespräch, damit wir uns bei einem ersten Treffen kennenlernen können.",
+"Ueber_mich_title": "Über mich",
+"Vermögensaufbau": "Vermögensaufbau",
+"Versicherungen": "Versicherungen",
+"Vorsorge": "Vorsorge",
+"Warum Finanzplanung": "Warum Finanzplanung",
+"Warum_Finanzplanung_text_paragraph_1": "Eine professionelle Finanzplanung bildet den Grundbaustein einer sorgenfreien Zukunft.",
+"Warum_Finanzplanung_text_paragraph_2": "Dank der Erstellung eines klaren Budgets und Finanzplans, können Einnahmen und Ausgaben optimal aufeinander abgestimmt werden.",
+"Warum_Finanzplanung_text_paragraph_3": "Die gemeinsame Analyse der individuellen Situation erlaubt die Planung zur Verwirklichung von Träumen und Zielen wie Eigenheim, Weltreise oder Familienplanung.",
+"Warum_Finanzplanung_text_paragraph_4": "Entsprechend den persönlichen Bedürfnissen, werden passende Finanzprodukte ausgewählt und zusammengestellt.",
+"eigenheim_paragraph_0_text": "eigenheim_paragraph_0_text",
+"eigenheim_paragraph_0_title": "Machbarkeit",
+"eigenheim_paragraph_1_text": "eigenheim_paragraph_1_text",
+"eigenheim_paragraph_1_title": "Hypothekenvergleich",
+"vermoegensaufbau_paragraph_0_text": "vermoegensaufbau_paragraph_0_text",
+"vermoegensaufbau_paragraph_0_title": "Sparplan",
+"vermoegensaufbau_paragraph_1_text": "vermoegensaufbau_paragraph_1_text",
+"vermoegensaufbau_paragraph_1_title": "Investments",
+"versicherungen_paragraph_0_text": "verischerungen_paragraph_0_text",
+"versicherungen_paragraph_0_title": "Vermögenssicherung",
+"versicherungen_paragraph_1_text": "verischerungen_paragraph_1_text",
+"versicherungen_paragraph_1_title": "Sachversicherung",
+"vorsorge_paragraph_0_text": "Was passiert, wenn ich heute einen Unfall habe und arbeitsunfähig werde ? Wieviel Lohn wird mir gezahlt, wenn ich aufgrund einer einschneidenden Krankheit längerfristig nicht mehr arbeiten kann ? Solche Fragen stellt man sich nicht gerne, aber es ist besonders für Singles, Eltern und Selbstständige wichtig, in solchen Fällen gut abgesichert zu sein. Dank einer gemeinsamen Analyse Ihrer Situation, kann ich Ihnen Vorsorgelücken aufzeigen. Mit passenden Lösungsvorschlägen können die gefundenen Lücken geschlossen werden.",
+"vorsorge_paragraph_0_title": "Einkommenssicherung",
+"vorsorge_paragraph_1_text": "Die Vorsorge der Kinder beginnt bereits vor deren Geburt.",
+"vorsorge_paragraph_1_title": "Vorsorge Nachkommen",
+"Über mich": "Über mich"
 }
