--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -7,13 +7,12 @@
   "Eigenheim": "Immobilier & Hypothèques",
   "Vermögensaufbau": "Constitution du patrimoine",
   "Versicherungen": "Assurances",
-
+  "Dienstleistungen": "Prestations",
   "Datenschutz": "Confidentialité",
 
   "Warum Finanzplanung": "Pourquoi un Conseil financier ?",
-  "Warum_Finanzplanung_text_paragrph_1": "Admettons-le : tout le monde a, de temps à autre, besoin de conseils.",
-  "Warum_Finanzplanung_text_paragrph_2": "Le marché Suisse - avec plus que 300 banques et 200 assurances - est trop vaste pour trouver facilement les solutions adaptées à notre situation personnelle. Grâce à un conseil financier professionnel et ciblé, vous pouvez combler des lacunes dans vos assurances, diminuer les dépenses, et faire d'avantage plus d'économies. Tout commence par définir ces rêves et objectifs. Par la suite, je vous aide à planifier l'acaht d'un logement, l'éducation de vos enfants, ou encore la mise une indépendance professionnelle.",
-
+  "Warum_Finanzplanung_text_paragraph_1": "Admettons-le : tout le monde a, de temps à autre, besoin de conseils.",
+  "Warum_Finanzplanung_text_paragraph_2": "Le marché Suisse - avec plus que 300 banques et 200 assurances - est trop vaste pour trouver facilement les solutions adaptées à notre situation personnelle. Grâce à un conseil financier professionnel et ciblé, vous pouvez combler des lacunes dans vos assurances, diminuer les dépenses, et faire d'avantage plus d'économies. Tout commence par définir ces rêves et objectifs. Par la suite, je vous aide à planifier l'acaht d'un logement, l'éducation de vos enfants, ou encore la mise une indépendance professionnelle.",
   "Card_Vorsorge_paragraph_1": "Prévoyance vieillesse",
   "Card_Vorsorge_paragraph_2": "Garantie du Revenu",
   "Card_Vorsorge_paragraph_3": "Prévoyance patrimoniale",
