Changes in translations added

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -14,9 +14,9 @@
     "Datenschutz": "Datenschutz",
     "Dienstleistung": "Dienstleistung",
     "Eigenheim": "Eigenheim",
-    "eigenheim_paragraph_0_text": "eigenheim_paragraph_0_text_de",
+    "eigenheim_paragraph_0_text": "Der Traum vom Eigenheim ist einer der meistgenannten Lebensziele von SchweizerInnen. Doch was bringt der Kauf einer Eigentumswohnung oder eines Hauses für finanzielle Vorteile? Welche Art von Immobilie können Sie sich leisten? Diese und weitere Fragen können in einem Beratungsgespräch geklärt werden. Zudem werde ich Ihnen zeigen, wie Sie mit einem gezielten Sparplan Ihren Traum von den eigenen vier Wänden schneller wahr werden lassen können.",
     "eigenheim_paragraph_0_title": "Machbarkeit",
-    "eigenheim_paragraph_1_text": "eigenheim_paragraph_1_text_de",
+    "eigenheim_paragraph_1_text": "Die Finanzierung eines Eigenheims kann sich unterschiedlich zusammensetzen. Ich zeige Ihnen, was Sie bei den verschiedenen Finanzierungsmöglichkeiten beachten müssen. Sobald Sie ein bestimmtes Objekt ins Auge gefasst haben, kann ich Ihnen verschiedene Hypothekar-Angebote mit unterschiedlicher Laufzeit bei unterschiedlichen Banken unterbreiten. Gemeinsam finden wir die auf Sie zugeschnittene Lösung.",
     "eigenheim_paragraph_1_title": "Hypothekenvergleich",
     "eigenheim_paragraph_2_text": "eigenheim_paragraph_1_text_de",
     "eigenheim_paragraph_2_title": "Langzeitplanung",
@@ -44,7 +44,7 @@
     "Vorsorge": "Vorsorge",
     "vorsorge_paragraph_0_text": "Was passiert, wenn ich heute einen Unfall habe und arbeitsunfähig werde ? Wieviel Lohn wird mir gezahlt, wenn ich aufgrund einer einschneidenden Krankheit längerfristig nicht mehr arbeiten kann ? Solche Fragen stellt man sich nicht gerne, aber es ist besonders für Singles, Eltern und Selbstständige wichtig, in solchen Fällen gut abgesichert zu sein. Dank einer gemeinsamen Analyse Ihrer Situation, kann ich Ihnen Vorsorgelücken aufzeigen. Mit passenden Lösungsvorschlägen können die gefundenen Lücken geschlossen werden.",
     "vorsorge_paragraph_0_title": "Einkommenssicherung",
-    "vorsorge_paragraph_1_text": "Die Vorsorge der Kinder beginnt bereits vor deren Geburt.",
+    "vorsorge_paragraph_1_text": "Die Vorsorge der Kinder beginnt bereits vor deren Geburt. Einerseits müssen werdende Eltern sich Gedanken über die Zukunft der Kinder machen - Gesundheit, Ausbildung, sorgenfreie Kindheit. Andererseits ist es wichtig, sich der finanziellen Lage der Familie bewusst zu sein. Die Erstellung eines Budgets und einer langfristigen Finanzstrategie hilft, einen klaren Durchblick zu schaffen. Somit können alle Familienmitglieder gelassen in die Zukunft gehen.",
     "vorsorge_paragraph_1_title": "Vorsorge Nachkommen",
     "vorsorge_paragraph_2_text": "vorsorge_paragraph_2_text_de",
     "vorsorge_paragraph_2_title": "Altersvorsorge",
