--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -26,7 +26,7 @@
   "Miriam über Finanzplanung": "La planification financière selon Miriam",
   "Miriam_über_finanzplanung_text": "Nous décidons de demander des conseils professionnels pour diverses raisons importantes.",
   "Über mich": "À propos de moi",
-  "Ueber_mich_text": "Avant de me lancer autant que conseillère financière indépendant, j'ai effectué des études à l'Hospitality Business School à Lausanne. Actuellement en formation continue, j'approfondis mes connaissances de base en finance, comptabilité et immobilier pour obtenir le brevet fédéral. Ayant travaillé dans l'industrie hôtelière pendant de nombreuses années, j'ai l'habitude de travailler avec toutes sortes de clients. Les gens, avec leurs rêves et leurs souhaits, sont toujours au centre de mes préoccupations. Mon travail me permet de rencontrer des personnes dans toute la Suisse et de les accompagner dans la gestion de leurs finances. Contactez-moi afin qu'on fasse connaissance lors d'un premier rendez-vous gratuite et sans engagement !",
+  "Ueber_mich_text": "Avant de me lancer autant que conseillère financière indépendante, j'ai effectué des études à l'Hospitality Business School à Lausanne. Actuellement en formation continue, j'approfondis mes connaissances de base en finance, comptabilité et immobilier pour obtenir le brevet fédéral. Ayant travaillé dans l'industrie hôtelière pendant de nombreuses années, j'ai l'habitude de travailler avec toutes sortes de clients. Les gens, avec leurs rêves et leurs souhaits, sont toujours au centre de mes préoccupations. Mon travail me permet de rencontrer des personnes dans toute la Suisse et de les accompagner tout au long de leur vie dans la gestion de leurs finances. Contactez-moi afin qu'on fasse connaissance lors d'un premier rendez-vous gratuite et sans engagement !",
   "Ueber_mich_title": "À propos de moi",
   "vermoegensaufbau_paragraph_0_text": "vermoegensaufbau_paragraph_0_text_fr",
   "vermoegensaufbau_paragraph_0_title": "Plan d'épargne",
@@ -51,7 +51,7 @@
   "vorsorge_paragraph_2_title": "Prévoyance patrimoniale",
   "Warum Finanzplanung": "Pourquoi un Conseil financier ?",
   "Warum_Finanzplanung_text_paragraph_1": "Admettons-le : tout le monde a, de temps à autre, besoin de conseils.",
-  "Warum_Finanzplanung_text_paragraph_2": "Le marché Suisse - avec plus que 300 banques et 200 assurances - est trop vaste pour trouver facilement les solutions adaptées à notre situation personnelle. Grâce à un conseil financier professionnel et ciblé, vous pouvez combler des lacunes dans vos assurances, diminuer les dépenses, et faire d'avantage plus d'économies. Tout commence par définir ces rêves et objectifs. Par la suite, je vous aide à planifier l'acaht d'un logement, l'éducation de vos enfants, ou encore la mise une indépendance professionnelle.",
+  "Warum_Finanzplanung_text_paragraph_2": "Le marché Suisse - avec plus que 300 banques et 200 assurances - est trop vaste pour trouver facilement les solutions adaptées à notre situation personnelle. Grâce à un conseil financier professionnel et ciblé, vous pouvez combler des lacunes dans vos assurances, diminuer les dépenses, et faire d'avantage plus d'économies. Tout commence par définir ces rêves et objectifs. Par la suite, je vous aide à planifier l'achat d'un logement, l'éducation de vos enfants, ou encore la mise en indépendance professionnelle.",
   "Warum_Finanzplanung_text_paragraph_3": "",
   "Warum_Finanzplanung_text_paragraph_4": ""
 }
